# marmy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TODO.md  backend_plan.md  dev_context.md  frontend_plan.md  product_prd.md  product_vision.md  project_evolution_notes_20260226.md  research.md  security_audit.md
.claude/commands/: prioritize.md
agent/: Cargo.toml  config.toml.example
agent/src/: auth.rs  config.rs  main.rs  notifications.rs  state.rs
agent/src/api/: cc.rs  files.rs  mod.rs  notifications.rs  panes.rs  sessions.rs  voice.rs  ws.rs
agent/src/tmux/: control.rs  mod.rs  parser.rs  types.rs
api/: .env.example  README.md  package-lock.json  package.json
api/config/: default.yaml
api/src/: config.ts  index.ts  server.ts
api/src/middleware/: auth.ts
api/src/routes/: index.ts  projects.ts  sessions.ts  system.ts
docs/: launch_todo.md  marwan_step_by_step_phase2.md  notifications.md  openclaw_comparison.md  prelaunch-assessment.md  team_topology.md  terminal-ux-improvements.md  voice_agent_prompt.md  voice_duplex_feasibility.md  voice_interface.md
ios/marmy/: Info.plist
mobile/: app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/app/: _layout.tsx  files.tsx  index.tsx  terminal.tsx  workers.tsx
mobile/ios/: Podfile
mobile/src/: theme.ts
relay/: README.md  index.mjs  worker.mjs  wrangler.toml
scripts/: build-pkg.sh  install.sh
scripts/pkg-scripts/: postinstall
website/: astro.config.mjs  package-lock.json  package.json
website/.astro/: data-store.json  settings.json
(+94 files in other folders)
