[package]
name = "marmy-agent"
version = "0.1.0"
edition = "2021"
description = "Lightweight daemon bridging tmux sessions to the Marmy mobile app"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
base64 = "0.22"
dirs = "5"
anyhow = "1"
thiserror = "1"
futures = "0.3"
tokio-stream = "0.1"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "http2"] }
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
